--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "git+https://github.com/fab1o/oh-my-posh-aliases.git"
   },
   "scripts": {
+    "start": "node test",
     "test": "node test"
   },
   "version": "1.0.0"
