Improve cov to create colors and open text editor

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "dev": "npm start",
     "start": "node test",
-    "test": "node test"
+    "test": "node test",
+    "test:coverage": "echo '\n[36mRunning tests with coverage...[39m' && echo '' && npm test"
   },
   "version": "1.0.0"
 }
