--- a/src/.zprofile_config
+++ b/src/.zprofile_config
@@ -1,51 +1,59 @@
-# Version 1.3.0
+# Version 1.4.0
 
-# Package manager to use:
-# example: yarn | npm run | pnpm | bun
-# default: npm run
-Z_PACKAGE_MANAGER=npm run
+# Folder path to projects:
+# example: ~/Developer/my_project
+Z_PROJECT_FOLDER_1=~/Developer/fabio/oh-my-posh-aliases
+Z_PROJECT_FOLDER_2=
+Z_PROJECT_FOLDER_3=
 
-# Command to run the project in development mode.
-# default: npm run dev
-Z_RUN_DEV=npm run dev
+# Short name for each project:
+# make it short, use abbreviation and one word only.
+Z_PROJECT_SHORT_NAME_1=posh
+Z_PROJECT_SHORT_NAME_2=
+Z_PROJECT_SHORT_NAME_3=
 
-# Folder path to my project.
-# default: ~/
-Z_PROJECT_FOLDER=
+# Repository uri for each project:
+Z_PROJECT_REPO_1=git@github.com:fab1o/oh-my-posh-aliases.git
+Z_PROJECT_REPO_2=
+Z_PROJECT_REPO_3=
 
-# Repository uri
-# default: git@github.com:fab1o/oh-my-posh-aliases.git
-Z_PROJECT_REPO=git@github.com:fab1o/oh-my-posh-aliases.git
+# Package manager for each project:
+# example: yarn
+# example: npm run
+# example: pnpm
+# example: bun
+Z_PACKAGE_MANAGER_1=yarn
+Z_PACKAGE_MANAGER_2=
+Z_PACKAGE_MANAGER_3=
 
-# Name of the project (make it short/use abbreviation)
-# default: my
-Z_PROJECT_SHORT_NAME=my
+# Commands to run with alias: setup
+# Use it to customize the setup process
+Z_SETUP_1=yarn install && echo 'setup completed'
+Z_SETUP_2=
+Z_SETUP_3=
 
-# script in the cloned project's package.json to run, if any, after cloning
-# default: npm i
-Z_SETUP_SCRIPT=npm i
+# Commands to run for each project with alias: run
+# Use it to customize the run process
+Z_RUN_1=yarn start
+Z_RUN_2=
+Z_RUN_3=
 
-# commands to run via eval, if any, after clone or setup
-# example: cd /setup && sh setup && echo 'done'
-# PWD is the path of the cloned project in which the folder path is given by you.
-Z_COPY_SETUP_FILES=
+# pull request template of each project.
+Z_PR_TEMPLATE_1=.github/pull_request_template.md
+Z_PR_TEMPLATE_2=
+Z_PR_TEMPLATE_3=
 
-# a bash script path to run, if any and if file exists, after 'Z_PROJECT_SETUP_SCRIPT'
-# example: ./some_script.sh
-# PWD is the same as above.
-Z_SETUP_BASH_SCRIPT_PATH=
+# text to be matched in the PR template to append commit messages with command: pr
+Z_PR_REPLACE_1=Description:
+Z_PR_REPLACE_2=
+Z_PR_REPLACE_3=
 
-# pull request template.
-# example: '.github/pull_request_template.md'
-Z_PULL_REQUEST_TEMPLATE=.github/pull_request_template.md
+# 1 to append commit messages to Z_PR_REPLACE or 0 to replace it.
+Z_PR_APPEND_2=0
+Z_PR_APPEND_2=0
+Z_PR_APPEND_3=0
 
-# text to be matched in the PR template, used in the 'pr' function.
-Z_PR_REPLACE=Description:
-
-# 1 to append commit messages to 'Z_PR_REPLACE' or 0 to replace 'Z_PR_REPLACE' with commit messages.
-# default: 0
-Z_PR_APPEND=1
-
-# 1 to run tests before pushing code and creating a pr or 0 to not run tests
-# default: 0
-Z_PR_RUN_TEST=1
+# 1 to run tests before pushing code and creating a pr or 0 to not run tests. If tests fail, pr is aborted.
+Z_PR_RUN_TEST_1=0
+Z_PR_RUN_TEST_2=0
+Z_PR_RUN_TEST_3=0
